fix(branding): update rendering for large brand image in nav
- added max-width to not size the image too much on webkits

BBNAV-80

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -205,3 +205,7 @@ h1 {
 .ck.ck-splitbutton:hover > .ck-file-dialog-button + .ck-splitbutton__arrow::after {
   width: 0 !important;
 }
+
+.ct-image {
+  max-width: 90px;
+}
